# fintech-oauth-sync-lab

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: crypto.py  db.py  logging_config.py  main.py  models.py  provider_client.py  provider_mock.py  settings.py  sync.py
fintech_oauth_sync_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: demo_sync.py
tests/: conftest.py  test_oauth.py  test_rate_limit.py  test_refresh.py  test_resume_idempotency.py  test_sync_pagination.py
